Add new sync task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,11 @@
             "type": "shell",
             "command": "./watch.bat",
             "runOptions": {"runOn": "folderOpen"}
-        }
+        },
+        {
+            "label": "sync",
+            "type": "shell",
+            "command": "git commit -a -m 'Sync' && git push",
+        },
     ]
 }
