Fix sync task to collect untracked files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
         {
             "label": "sync",
             "type": "shell",
-            "command": "(git commit -a -m 'Sync') -and (git push)",
+            "command": "git add -A; (git commit -m 'Sync') -and (git push)",
         },
     ]
 }
